--- a/problems/templates/problems_list1.html
+++ b/problems/templates/problems_list1.html
@@ -41,9 +41,11 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2c3e50;">
         <div class="container">
-            <a class="navbar-brand fs-3 fw-bold" href="#">Online Judge</a>
+            <a class="navbar-brand fs-3 fw-bold" href="{% url 'home' %}">Online Judge</a>
             <div class="d-flex">
+                {% if user.is_authenticated %}
                 <a href="/auth/logout/" class="btn btn-outline-light">Logout</a>
+                {% endif %}
             </div>
         </div>
     </nav>
